--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: UzHdebxBnAwVTK0EQkprIg
+# Checksum: bUsSIg8KYTsAuhXJlP8CxA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1366,6 +1366,7 @@
 /640x100/
 /700_100_
 /700_200.
+/700x100.
 /700x120.
 /700x250.
 /72890-0
