--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bUsSIg8KYTsAuhXJlP8CxA
+# Checksum: lgRQtQghbr+8tXHbPXqVBQ
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2481,6 +2481,8 @@
 /valueclick
 /vertical_advert
 /vghd.swf
+/vghd.gif
+/vghd2.gif
 /view.php?ad_id
 /view/banner/
 /view_banner.asp?
