--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lgRQtQghbr+8tXHbPXqVBQ
+# Checksum: Avd7w7iSL09wbhfpUEUlbg
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1067,6 +1067,7 @@
 .smartmovies.net/promo_
 .smarttargetting.
 .smashingapps.com/banner/
+.smutmodels.com/sponsors/
 .snap.com/
 .sociallypublish.com/html_profiles/
 .sociallypublish.com/publish/
