--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Avd7w7iSL09wbhfpUEUlbg
+# Checksum: T0xJjrJTx69OPxXiX8FnYA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -276,7 +276,6 @@
 .apmebf.com/image
 .apple.com/itunesaffiliates/
 .arcadebanners.
-.asg.to/ad/
 .ashleymadison.com/flashbanner/
 .asianewsnet.net/banner/
 .askjolene.com/endroll.php?
@@ -1881,6 +1880,7 @@
 /bilder/promo
 /bizbannerre
 /blog/ads/
+/blogad.
 /blogads
 /bmnDoubleclickAd.
 /bnr.php?
