--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: T0xJjrJTx69OPxXiX8FnYA
+# Checksum: 69Iac23se0qYHTnMp5N3YA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1701,8 +1701,6 @@
 /adserver/
 /Adserver?
 /adserver_
-/adsrv/js/
-/Adsrv/js/
 /adserversolutions/
 /adsframe.
 /adshow-
@@ -1722,6 +1720,8 @@
 /adsrc.html?
 /adsreporting/
 /adsRotator
+/Adsrv/js/
+/adsrv/js/
 /adss.asp
 /AdsSrv.html?adpos=
 /AdsTemplate/
@@ -2481,8 +2481,8 @@
 /uploads/ads/
 /valueclick
 /vertical_advert
-/vghd.swf
 /vghd.gif
+/vghd.swf
 /vghd2.gif
 /view.php?ad_id
 /view/banner/
@@ -2516,6 +2516,7 @@
 /xbanner.php?
 /xcdn.xgraph.net/
 /xhr/ad/
+/y07m06d22_files/adopt.
 /yaboe_banner_
 /yahoo-ads/
 /yahooFeedProxy.
@@ -3609,11 +3610,11 @@ http://www.whistleout.com.au/Widgets/
 http://x7.to/
 http://xban.
 http://xcabin.net/b/
+http://xclickdirect.com/
 http://xdev.info/
 http://xfuckbook.com/
-http://xclickdirect.com/
-http://xmlconfig.ltassrv.com/
 http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
+http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
 http://yieldbuild.com/
 http://yx0banners.com/
