--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 69Iac23se0qYHTnMp5N3YA
+# Checksum: 0mvdrR433KIAObkdXr3kMA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -883,6 +883,7 @@
 .net/ads3/
 .net/ads?
 .net/ADV/
+.net/ads.
 .net/adx.js
 .net/adx/
 .net/affiliate/
@@ -1928,6 +1929,7 @@
 /cpmrect.
 /cssjs/ads/
 /custom/ads
+/custom_ads/
 /data/Ads/
 /dateads.php
 /dclk_ads
