--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0mvdrR433KIAObkdXr3kMA
+# Checksum: k61u0V7JOULj21xvFsAUXA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3302,6 +3302,7 @@ http://femjoy.com/bnrs/
 http://fifialfa.com/images/sexmix
 http://fimserve.ign.com/
 http://flirtingsms.com/profileserver/
+http://frivol-ads.com/
 http://forumimg.ipmart.com/SWF/
 http://friendfinder.
 http://frontsight.com/images/banners/
