--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: k61u0V7JOULj21xvFsAUXA
+# Checksum: D0R42mlk8gpN2f/bpX4aqA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3149,6 +3149,7 @@ http://adtc.daum.net/
 http://adtech.panthercustomer.com/images/
 http://adtology
 http://adtools.gossipkings.com/
+http://adtools2.amakings.com/
 http://adult-profit-files.com/banner
 http://adult3dcomics.com/
 http://adultfriendfinder.com/
