--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: D0R42mlk8gpN2f/bpX4aqA
+# Checksum: V+t/aHhcDNSlTfiGaYPxEA
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -371,6 +371,7 @@
 .cam-content.
 .cam-lolita.net/index.php?
 .cam4.com/banners/
+.cam4.com/images/awebanner
 .camcrush.com/exports/
 .camelmedia.net/thumbs/
 .camsense.com/live/code.
