--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: V+t/aHhcDNSlTfiGaYPxEA
+# Checksum: UXCV88P3wKtCM96VE62lAg
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2038,6 +2038,7 @@
 /getBanner.
 /getbanner.cfm?
 /getbanner.php?
+/geitonpop
 /getMarketplaceAds.
 /getmdhlink.
 /getmdhlink.php?
