--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: UXCV88P3wKtCM96VE62lAg
+# Checksum: Ci0Dd9YuTqdMpOn1sOj7qg
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1576,6 +1576,7 @@
 /adjuggler
 /adlabel_horz
 /adlayer
+/adleft.
 /adlink.gif
 /adloader.
 /adlog.php?
