--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Ci0Dd9YuTqdMpOn1sOj7qg
+# Checksum: Dvc6V3RHoSshcPrrw4LXgQ
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -552,6 +552,7 @@
 .exclusivepussy.com/tcgma/?
 .exgirlfriendmarket.com/img2/ad/
 .exitjunction.
+.exoclick.com/
 .expertreviews.co.uk/images/skins/
 .exponential.
 .eyereturn.
