--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Dvc6V3RHoSshcPrrw4LXgQ
+# Checksum: WgSMO2KHaGpjf3zpuUy7tw
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1735,7 +1735,6 @@
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
-/adsync/
 /adsystem.
 /adsystem/
 /ads~adsize~
