--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WgSMO2KHaGpjf3zpuUy7tw
+# Checksum: uOBT19so5Xdfhai5xmRVzg
 # Updated: 24 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -444,6 +444,7 @@
 .com/affiliate/
 .com/banners/
 .com/doubleclick/
+.com/fullad
 .com/gads/
 .com/hserver/
 .com/js.ng/
@@ -881,11 +882,11 @@
 .net/ad-
 .net/adi/
 .net/adj/
+.net/ads.
 .net/ads2/
 .net/ads3/
 .net/ads?
 .net/ADV/
-.net/ads.
 .net/adx.js
 .net/adx/
 .net/affiliate/
@@ -2013,6 +2014,7 @@
 /gam_ad_
 /gameadsync.
 /gca_iframe.html?
+/geitonpop
 /geo-ads_
 /geo/ads.
 /geobox.html
@@ -2039,7 +2041,6 @@
 /getBanner.
 /getbanner.cfm?
 /getbanner.php?
-/geitonpop
 /getMarketplaceAds.
 /getmdhlink.
 /getmdhlink.php?
@@ -3306,9 +3307,9 @@ http://femjoy.com/bnrs/
 http://fifialfa.com/images/sexmix
 http://fimserve.ign.com/
 http://flirtingsms.com/profileserver/
-http://frivol-ads.com/
 http://forumimg.ipmart.com/SWF/
 http://friendfinder.
+http://frivol-ads.com/
 http://frontsight.com/images/banners/
 http://fuckbookdating.com/newim/
 http://fuelbuck.com/
