--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -131,6 +131,7 @@
 /publicidade_
 /publicidades/
 _fullbanner_balanca_
+_publicidad_
 _publicidad2.
 _publicidade.
 http://187.6.64.32/especialdenatal/home/produto_
