--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -121,6 +121,7 @@
 /h.s.sl.pt/pub/
 /igbarra.js
 /imagem/urchin.gif?
+/img_banner/
 /imagens.climatempo.com.br/site/imagens/bg_
 /imgcontador.php?
 /ml.track.me?p=
