--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -654,6 +654,7 @@
 .webtrekk.net/
 .webtrends.com/
 .webtrendslive.
+.webvoo.com/wt/Track
 .wego.com/scripts/track.js
 .wemfbox.
 .whispa.com/tracking/
