--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uOBT19so5Xdfhai5xmRVzg
-# Updated: 24 Jul 2010
+# Checksum: Ql+thPnrXrPy862DVHAkAg
+# Updated: 25 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1947,6 +1947,7 @@
 /direct_ads.js?
 /display-ads/
 /display?ad_
+/display_ad
 /displayad.
 /displayadbanner_
 /DisplayAdLeader.
@@ -2947,7 +2948,6 @@ cubics.com
 d468x60-
 dbbsrv.com/
 dhtmlpop
-display_ad
 enormousdating.com/iframe
 epiccams.com/exports/tour
 facebook.com/beacon/
