--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -195,6 +195,7 @@
 .interworksmedia.co.kr/
 .ipjoo.com/fileupdown/banner/
 .itvfm.co.kr/img/index/re/ad/
+.jshopbox.com/sbox/
 .jejusori.net/ad/
 .jejusori.net/banner/
 .jisungin.com/promotion/
