--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Ql+thPnrXrPy862DVHAkAg
-# Updated: 25 Jul 2010
+# Checksum: AJNfi5Pll7Sn5wEPJVMA1Q
+# Updated: 26 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1512,6 +1512,7 @@
 /ad_wrapper
 /adaffiliate_
 /adaptvAdPlayer.js
+/AdaptvAdserver
 /adbanner.
 /adbanner/
 /adbanners/
