--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: AJNfi5Pll7Sn5wEPJVMA1Q
+# Checksum: lp5y2nhCZBcpoctyEVRSJQ
 # Updated: 26 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1878,6 +1878,7 @@
 /bbccom.
 /beacon/?
 /behaviorAds/
+/belo_oas.
 /BelowNewsAd
 /BigBoxAd.
 /bigtopl.swf
@@ -2351,6 +2352,7 @@
 /rule34/ads/
 /rule34v2/ads/
 /safetrackonline.biz/
+/ScanScout.
 /ScanScoutPlugin.
 /scripts/ad-
 /scripts/Ad.
