--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -374,6 +374,7 @@
 .megastat.net/
 .met.vgwort.de/na/
 .metacafe.com/debugToSysLog.
+.meteorsolutions.com/
 .microcounter.
 .microsoft.com/library/svy/
 .microsoft.com/LTS/
