--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lp5y2nhCZBcpoctyEVRSJQ
+# Checksum: ubb86QfuKNDJw2VON61o8Q
 # Updated: 26 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -608,7 +608,6 @@
 .funklicks.
 .funpic.de/layer.php
 .fusionads.
-.fwmrm.net/ad/
 .g-cash.biz/banner/
 .g.doubleclick.
 .g4whisperermedia.
