--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ubb86QfuKNDJw2VON61o8Q
-# Updated: 26 Jul 2010
+# Checksum: woL+6UhKckG+hX6OwlPqHQ
+# Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2976,6 +2976,7 @@ http://87.230.102.24/
 http://88.208.23.
 http://89.248.172.46/
 http://a.c-planet.net/b/
+http://a.ucoz.net/
 http://a.thefreedictionary.
 http://aaa.at4.info/
 http://ad-clicks.com/
