--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: woL+6UhKckG+hX6OwlPqHQ
+# Checksum: 3fn59VYAZqWMD69an2QZ/Q
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -541,6 +541,7 @@
 .eporner.com/ads-
 .ero-advertising.com
 .erosadv.com/
+.erotikdating.com/
 .espn.go.com/ads/
 .etargetnet.com/generic/generic.php?
 .etology.
@@ -825,6 +826,7 @@
 .mediatext.
 .mediatraffic.com/
 .meetic-partners.com/call/adj/
+.media-toolbar.com/
 .megaban.com.ua/
 .megaporn.com/video/ad_
 .megaupload.com/mc.php?
