--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1174,6 +1174,7 @@
 /slimstat/
 /small.gif?type
 /smarta.
+/social-stats/counts?
 /solarcode.js
 /sometrics/
 /sophus3/
@@ -1552,8 +1553,8 @@ http://logger.
 http://logging.
 http://logping.
 http://logs.aiya.com.
-http://lypn.com/
 http://lslmetrics.
+http://lypn.com/
 http://maps.amung.us/geolocs/
 http://market015.com/
 http://mcs.delvenetworks.com/
