--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -514,6 +514,7 @@
 .seemore.ru/js/
 .serverkompetenz.net/cpx.php?
 .shinystat.
+.shopping.com/pixel/
 .site-id.nl/
 .siteclarity.
 .siteimprove.com/
