--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SqChGCfH7Q82t03tvYxS5Q
-# Updated: 26 Jul 2010
+# Checksum: abzfQD/PxCvnPIbsQFDQIw
+# Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1997,6 +1997,7 @@
 /flash/ads/
 /flash/maildating_
 /flash_advertising/
+/flesh_banner
 /flashads/
 /flashpeelads/
 /fleshlight.com/
