--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: abzfQD/PxCvnPIbsQFDQIw
+# Checksum: ksZb6nX0O25B0g2VWv7sKA
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3537,6 +3537,7 @@ http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
 http://stats-analytics.info/
+http://static.kinghost.com/
 http://stats.buzzparadise.
 http://stocker.bonnint.
 http://store.androidcommunity.com/external_marketing/
