--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ksZb6nX0O25B0g2VWv7sKA
+# Checksum: xGS2kXFVqJ8vYA6ik22Lnw
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1208,6 +1208,7 @@
 .visit-x.net/promo/
 .vn/banner/
 .vod-cash.
+.vrstage.com/vr/banner/
 .vzzk.com/uploads/banners/
 .w3exit.com/
 .wamcash.com/wcalertas/
@@ -1809,6 +1810,7 @@
 /aseadnshow.js
 /assets/ad/
 /astrack.
+/adtool/
 /athena/tag/?
 /au2m8_preloader/
 /AuditudeAdUnit.
