site: http://thehun.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xGS2kXFVqJ8vYA6ik22Lnw
+# Checksum: 9nG5gKntm6Qm3PqnDcjvKA
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3636,6 +3636,7 @@ http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
 http://yieldbuild.com/
 http://yx0banners.com/
+http://yanks-hosted.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
 https://adserv
