--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: B8rGHf6K8v9uK3O6Gb47zA
+# Checksum: PUuvWmxMW2Sh9K8VPdh2Zw
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1608,6 +1608,7 @@
 /AdPostInject
 /adproxy/
 /adrawdata/
+/adrefresh-
 /adRelated
 /adrelated.
 /adreplace/
@@ -1738,6 +1739,7 @@
 /adstubs/
 /adSwap.js
 /adsWrapper.js
+/adsWrapperIntl
 /adsx/www/
 /adsystem.
 /adsystem/
