--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -951,6 +951,7 @@
 /impression.ashx?
 /impression.gif?
 /impression.track?
+/Impressions/aolukdp.imp?
 /impressions?
 /includes/tracker/
 /index.track?
