--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PUuvWmxMW2Sh9K8VPdh2Zw
-# Updated: 27 Jul 2010
+# Checksum: lJlqnWhL1aHqhpIXrYQsTQ
+# Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1608,7 +1608,6 @@
 /AdPostInject
 /adproxy/
 /adrawdata/
-/adrefresh-
 /adRelated
 /adrelated.
 /adreplace/
@@ -1739,7 +1738,6 @@
 /adstubs/
 /adSwap.js
 /adsWrapper.js
-/adsWrapperIntl
 /adsx/www/
 /adsystem.
 /adsystem/
@@ -1753,7 +1751,6 @@
 /adtext4
 /adtext_vert
 /adtomo/www/
-/adtool/
 /adtrack
 /adunit.
 /adunitt
@@ -1813,6 +1810,7 @@
 /aseadnshow.js
 /assets/ad/
 /astrack.
+/adtool/
 /athena/tag/?
 /au2m8_preloader/
 /AuditudeAdUnit.
@@ -1971,7 +1969,6 @@
 /dynamic/ads/
 /dynamic_banner_
 /DynamicAd?
-/dynanews/ad-
 /ecom/failsafe/
 /ecomfw.
 /emailads/
@@ -2002,9 +1999,9 @@
 /flash/ads/
 /flash/maildating_
 /flash_advertising/
+/flesh_banner
 /flashads/
 /flashpeelads/
-/flesh_banner
 /fleshlight.com/
 /fleshlightcash_
 /floatadv.
@@ -2461,6 +2458,7 @@
 /TDLads/
 /technomedia.
 /text_ad_
+/text_ad.
 /textAd.
 /textad.
 /textad?
@@ -3536,13 +3534,13 @@ http://static.4chan.org/support/
 http://static.apture.com/media/
 http://static.camprime.com/images/
 http://static.jpost.com/images/2009/NewSite/
-http://static.kinghost.com/
 http://static.liverail.com/js/companions/
 http://static.stileproject.com/l/
 http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
 http://stats-analytics.info/
+http://static.kinghost.com/
 http://stats.buzzparadise.
 http://stocker.bonnint.
 http://store.androidcommunity.com/external_marketing/
@@ -3637,9 +3635,9 @@ http://xfuckbook.com/
 http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
 http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
-http://yanks-hosted.com/
 http://yieldbuild.com/
 http://yx0banners.com/
+http://yanks-hosted.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
 https://adserv
