--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lJlqnWhL1aHqhpIXrYQsTQ
-# Updated: 28 Jul 2010
+# Checksum: Olb1f+azW3hS9t433fh1ag
+# Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -427,6 +427,7 @@
 .com/ad.js
 .com/AD/
 .com/ad/
+.com/ad_
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -1751,6 +1752,7 @@
 /adtext4
 /adtext_vert
 /adtomo/www/
+/adtool/
 /adtrack
 /adunit.
 /adunitt
@@ -1810,7 +1812,6 @@
 /aseadnshow.js
 /assets/ad/
 /astrack.
-/adtool/
 /athena/tag/?
 /au2m8_preloader/
 /AuditudeAdUnit.
@@ -1999,9 +2000,9 @@
 /flash/ads/
 /flash/maildating_
 /flash_advertising/
-/flesh_banner
 /flashads/
 /flashpeelads/
+/flesh_banner
 /fleshlight.com/
 /fleshlightcash_
 /floatadv.
@@ -2457,8 +2458,8 @@
 /targetedOffer.jsp?
 /TDLads/
 /technomedia.
-/text_ad_
 /text_ad.
+/text_ad_
 /textAd.
 /textad.
 /textad?
@@ -3534,13 +3535,13 @@ http://static.4chan.org/support/
 http://static.apture.com/media/
 http://static.camprime.com/images/
 http://static.jpost.com/images/2009/NewSite/
+http://static.kinghost.com/
 http://static.liverail.com/js/companions/
 http://static.stileproject.com/l/
 http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
 http://stats-analytics.info/
-http://static.kinghost.com/
 http://stats.buzzparadise.
 http://stocker.bonnint.
 http://store.androidcommunity.com/external_marketing/
@@ -3635,9 +3636,9 @@ http://xfuckbook.com/
 http://xml.exactseek.com/cgi-bin/js-feed.cgi?id=
 http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
+http://yanks-hosted.com/
 http://yieldbuild.com/
 http://yx0banners.com/
-http://yanks-hosted.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
 https://adserv
