--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Olb1f+azW3hS9t433fh1ag
-# Updated: 27 Jul 2010
+# Checksum: EZShflrRPhf5c9dAv/cKvw
+# Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1471,6 +1471,7 @@
 /AD_Banner
 /ad_banner
 /ad_base.
+/ad_bot.
 /ad_bottom
 /ad_caption.
 /ad_common
@@ -1511,6 +1512,7 @@
 /ad_tag_
 /ad_tags_
 /ad_top_
+/ad_top.
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
