--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -341,6 +341,7 @@
 .kosmix.com/images/pv.txt?
 .lastminute.com/cm/tr/
 .latimes.com/pixel/
+.legolas-media.com/
 .letsstat.nl/
 .libstat.com/
 .lijit.com/beacon?
@@ -1172,6 +1173,7 @@
 /site_stats/
 /siteafs.txt?
 /sitestat.
+/site_stats.
 /sitestats.gif?
 /slimstat/
 /small.gif?type
