--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Olb1f+azW3hS9t433fh1ag
+# Checksum: V0+ku53/FVCn+fwZtUX3Fw
 # Updated: 27 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1267,6 +1267,7 @@
 .yourlayer.de/
 .yudu.com/item/reader_check_intro_ads
 .yumenetworks.com/
+.yuppads.com/
 .yzrnur.com/
 .zangocash.com/
 .zazzle.com/utl/getpanel?
