--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -179,6 +179,7 @@
 .icinews.kr/fla/b
 .idaegu.co.kr/kwun
 .idaegu.co.kr/smart_
+.idomin.com/banner/
 .ijungang.com/_NEWS/upimg/bn/
 .ilikeclick.com/part/
 .imbc.com/2008com/main/rightbanner_
