--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: m/C7cMC29EFeO6FI2N/Qeg
-# Updated: 27 Jul 2010
+# Checksum: iBjgqq+isSVhOBdjgHIobw
+# Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2899,6 +2899,7 @@ _generic_ad.
 _geobanner.
 _google_ad.
 _google_video_ads
+_headline_ad.
 _hp_promo_
 _iframe_ad_
 _leftx280_
