--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iBjgqq+isSVhOBdjgHIobw
+# Checksum: XeVWrBJgh27CfvB/rxszqQ
 # Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -417,6 +417,7 @@
 .cocolog-nifty.com/banner/
 .codigobarras.
 .collective-media.
+.com.au/ads/
 .com.au/banners/
 .com/?wid=
 .com/a?network
