--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XeVWrBJgh27CfvB/rxszqQ
+# Checksum: cFSo2KEMpLMe7whdaGc9BA
 # Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -429,6 +429,8 @@
 .com/AD/
 .com/ad/
 .com/ad_
+.com/ad2/
+.com/adv3/
 .com/adfile/
 .com/adimg/
 .com/adjs/
