--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cFSo2KEMpLMe7whdaGc9BA
+# Checksum: qAIpsnqkmNNKIyi+dv0uNA
 # Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1796,6 +1796,7 @@
 /affiliates/ban
 /affiliates/images/banners/
 /affilitebanners/
+/afr.php?zone
 /ajax/ads/
 /ajrotator/
 /ajs.php?
