--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1012,6 +1012,7 @@
 /logactions.gif?
 /logaholictracker
 /logextrastats.php?
+/logger.ashx?
 /logger/p.gif?
 /logging_save.gif?
 /logHandler.aspx?
@@ -1170,10 +1171,10 @@
 /site-tracker.js
 /site-tracker_
 /site/enlightenment.html?
+/site_stats.
 /site_stats/
 /siteafs.txt?
 /sitestat.
-/site_stats.
 /sitestats.gif?
 /slimstat/
 /small.gif?type
@@ -1314,12 +1315,12 @@
 /vertical-stats.
 /video_count.php?
 /ViewCounter/
+/viewcounterproxy.
 /viewstats.aspx?
 /viewtracking.aspx?
 /visit.gif?
 /visit/record.gif?
 /VisitCounter.
-/viewcounterproxy.
 /visitor/index.php?
 /visitWebPage?_
 /vs/tag.gif?
