--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qAIpsnqkmNNKIyi+dv0uNA
+# Checksum: tr02E3yf1ZyGPPLjkZ4w8w
 # Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -428,9 +428,8 @@
 .com/ad.js
 .com/AD/
 .com/ad/
-.com/ad_
 .com/ad2/
-.com/adv3/
+.com/ad_
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -442,6 +441,7 @@
 .com/adshow
 .com/adstream_
 .com/adv/
+.com/adv3/
 .com/advert_
 .com/advt/
 .com/adx.js
@@ -1408,6 +1408,7 @@
 /960_60_
 /985x120_
 /?adv_partner
+/?view=ad
 /_include/ads/
 /_odd_images/banners/
 /_special/banners/
