site: http://pornscene.in/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: tr02E3yf1ZyGPPLjkZ4w8w
-# Updated: 28 Jul 2010
+# Checksum: e+8l2UlgyCaIP4CdOV0nlA
+# Updated: 29 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -94,6 +94,7 @@
 .abovetopsecret.com/728_
 .acmexxx.com/
 .acode.ifocus.
+.adcell.de/
 .acronym.
 .activewin.com/awin/images/blaze_static
 .activewin.com/images/mbn_ad.
@@ -428,8 +429,9 @@
 .com/ad.js
 .com/AD/
 .com/ad/
-.com/ad2/
 .com/ad_
+.com/ad2/
+.com/adv3/
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -441,7 +443,6 @@
 .com/adshow
 .com/adstream_
 .com/adv/
-.com/adv3/
 .com/advert_
 .com/advt/
 .com/adx.js
@@ -578,6 +579,7 @@
 .filezexpress.info/
 .fimserve.
 .first-rate.com/
+.firstload.de/
 .firstadsolution.
 .firstlightera.
 .fixionmedia.
@@ -1408,7 +1410,6 @@
 /960_60_
 /985x120_
 /?adv_partner
-/?view=ad
 /_include/ads/
 /_odd_images/banners/
 /_special/banners/
@@ -1797,7 +1798,6 @@
 /affiliates/ban
 /affiliates/images/banners/
 /affilitebanners/
-/afr.php?zone
 /ajax/ads/
 /ajrotator/
 /ajs.php?
@@ -1911,6 +1911,7 @@
 /bravenet/images/
 /buttonad/
 /buzz/ads/
+/cached/bnr_
 /call/pubif/
 /call/pubj/
 /cgi-bin/adcgi
