--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qroGfRhlLEz9cDkFksJV5Q
+# Checksum: sJStelVWBc6XGi1hyMaCew
 # Updated: 28 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -99,6 +99,7 @@
 .activewin.com/images/mbn_ad.
 .ad-indicator.
 .ad-srv.net/
+.ad-u.com/
 .ad-z.de/
 .ad.footer
 .ad.naver.com/
