--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sJStelVWBc6XGi1hyMaCew
-# Updated: 28 Jul 2010
+# Checksum: VPWH2qa1n6ViwNjpgRUo6A
+# Updated: 29 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2218,6 +2218,7 @@
 /mainAD.html
 /mcad.php?
 /media/ads/
+/media/adv/
 /mediaplayer/island?zone=
 /mediaplayer/leaderboard?zone=
 /MetaAdServer/
