--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VPWH2qa1n6ViwNjpgRUo6A
-# Updated: 29 Jul 2010
+# Checksum: tQVH9kRXC6FsRQ83OwnvFw
+# Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2344,6 +2344,7 @@
 /RealMedia/ads/
 /realmedia_banner
 /reclame/
+/refreshads-
 /reklam.php?
 /reklam/
 /reklama/
