--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: tQVH9kRXC6FsRQ83OwnvFw
+# Checksum: aa7jdWLRURwRtxppMH3KUw
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -132,7 +132,7 @@
 .adfrontiers.com/
 .adfusion.
 .adgardener.
-.adgear.com/
+.adgear.com/assets/
 .adgent007.com/
 .adgitize.com/
 .adgoto.com/
@@ -1572,6 +1572,7 @@
 /adfshow
 /adFunction
 /adfunction
+/adgear.
 /AdHandler.
 /adhandler/
 /AdHandlers
@@ -1736,6 +1737,7 @@
 /adsOpenx/
 /adspace/
 /adspace2.
+/adspots.
 /adsrc.html?
 /adsreporting/
 /adsRotator
