--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aa7jdWLRURwRtxppMH3KUw
+# Checksum: Z9JeNZCNcqul5r97vQORUg
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1944,6 +1944,7 @@
 /contextads.
 /core77_ad.aspx?z
 /corner_ads/
+/cornerbig.swf
 /COSPLAY--AD-
 /cpc_ads?
 /cpm160.
