--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z9JeNZCNcqul5r97vQORUg
+# Checksum: lgMbgKeTs4VsnHSJG1PJbQ
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1945,6 +1945,7 @@
 /core77_ad.aspx?z
 /corner_ads/
 /cornerbig.swf
+/cornersmall.swf
 /COSPLAY--AD-
 /cpc_ads?
 /cpm160.
@@ -2364,6 +2365,7 @@
 /rightads.
 /rightbanner/
 /rotating_banner.php
+/rotatingpeels.
 /rotatingtextad
 /rotation/banner
 /rotationad.
@@ -3583,6 +3585,7 @@ http://trackdataonline.biz/
 http://trackin.affiliserve.com/
 http://trade.porndirt.com/cgi-bin/
 http://trader.erosdlz.com/
+http://traffic-supremacy.com/
 http://traffic.liveuniversenetwork.
 http://traffic4adult.com/generate.
 http://trafficcdn.liveuniversenetwork.com/
