--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lgMbgKeTs4VsnHSJG1PJbQ
+# Checksum: ZstWO7XXyN6V3m0cap7+EA
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -584,6 +584,7 @@
 .firstlightera.
 .firstload.de/
 .fixionmedia.
+.flabber.nl/sites/all/misc/
 .flashtalking.com/imp/
 .fleshlight.com/images/banners/
 .fleshlightgirls.
