--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZstWO7XXyN6V3m0cap7+EA
+# Checksum: KN/g7qhbEthaTNLikG3JHQ
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1153,6 +1153,7 @@
 .todovenganzas.com/popupnew/
 .tokyo-genki.
 .top.list.ru/
+.topauto10.com/
 .topbucks.com/
 .toptenreviews.com/flash/
 .toptenreviews.com/i/sponsors/
