--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KN/g7qhbEthaTNLikG3JHQ
+# Checksum: xBoRHrCeU0kpj2El2pwT1w
 # Updated: 30 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -270,6 +270,7 @@
 .amazon.com/widgets/
 .amazonaws.com/widget/
 .amgdgt.com/
+.ampxchange.com/
 .andomedia.com/ufo.js
 .animecrazy.net/ads/
 .anonib.com/zimages/
