--- a/easylistfanboy/iron/adblock-tam.ini
+++ b/easylistfanboy/iron/adblock-tam.ini
@@ -2,6 +2,7 @@
 .com/bAds/
 .com/player/ads/
 /banner728x90
+/photoad.
 /PhotoGallaryAds.
 http://www.smashitsusa.com/bottombanner
 http://www.smashitsusa.com/google
