--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xBoRHrCeU0kpj2El2pwT1w
-# Updated: 30 Jul 2010
+# Checksum: 8uc837GC+IqtGeVtJtsL7A
+# Updated: 31 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2156,6 +2156,7 @@
 /images_ad/
 /img/468_60
 /img/728_90
+/img/_ad.
 /img/ad_
 /img/ads/
 /img/adv/
