--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8uc837GC+IqtGeVtJtsL7A
+# Checksum: PoQFnC+L174DQFn7yDA17g
 # Updated: 31 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1567,6 +1567,7 @@
 /adfetch
 /ADFlashes/
 /adfolder/
+/AdifyAd.
 /adforums/
 /adfr.html?
 /adframe.
