--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PoQFnC+L174DQFn7yDA17g
+# Checksum: BEX9JYU/J7vD11cy7ztOtQ
 # Updated: 31 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -905,6 +905,7 @@
 .net/bnr/
 .net/noidadx/
 .net/pagead?
+.net/pfadj/
 .net3media.
 .netdirect.nl/
 .netdrive.ws/images/bb
