--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BEX9JYU/J7vD11cy7ztOtQ
+# Checksum: gk0vN/4DmbekvpbCt9CxDA
 # Updated: 31 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -924,6 +924,7 @@
 .northmay.
 .novoporn.com/imagelinks/
 .nrs-group.
+.nsimg.net/
 .nubiles.net/webmasters/promo/
 .nude.hu/banners/
 .nude.hu/html/
