--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gk0vN/4DmbekvpbCt9CxDA
+# Checksum: oQshKwGk8/EfMD+Fmzljzw
 # Updated: 31 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -27,6 +27,7 @@
 -160X600b
 -180x250.
 -180x60.
+-184x100.
 -234x60-
 -235x58p
 -235x60-
@@ -1569,7 +1570,6 @@
 /adfetch
 /ADFlashes/
 /adfolder/
-/AdifyAd.
 /adforums/
 /adfr.html?
 /adframe.
@@ -1586,6 +1586,7 @@
 /adhug_jc.
 /adiframe.aspx?
 /adiframe/
+/AdifyAd.
 /adim.html?ad
 /adimage
 /Adinator/
