--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -424,6 +424,7 @@
 .omtrdc.net/
 .online-metrix.net/
 .onlinewebstat.
+.ooyala.com/errors/report?log
 .open.ua/stat/
 .openhit.com/
 .opentracker.net/
