--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -172,6 +172,7 @@
 .counterwelt.de/track/
 .countomat.com/
 .countomat.com/
+.cnn.com/images/tracking/
 .cpcmanager.
 .cqcounter.
 .creditcards.com/sb.php?
