--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oQshKwGk8/EfMD+Fmzljzw
-# Updated: 31 Jul 2010
+# Checksum: geFeQ9fZ/FOw2+OrArI9ug
+# Updated: 1 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2861,6 +2861,7 @@ _728x60.
 _728x90-
 _728x90.
 _728x90_
+_728-90_
 _728x90a_
 _728x90b_
 _728x90p
