--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: geFeQ9fZ/FOw2+OrArI9ug
+# Checksum: SEc0gHZykGQ1bOvBihZlFQ
 # Updated: 1 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1046,6 +1046,7 @@
 .sbs-ad.com/
 .scanscout.com/
 .scoop.co.nz/xl?c
+.scorecardresearch.com/
 .se/adx.js
 .searchfeed.
 .searchpixie.
@@ -3228,7 +3229,6 @@ http://armorgames.com/misc/banners/
 http://athena-ads.
 http://au2m8.com/
 http://av.ctnetwork.hu/?
-http://b.scorecardresearch.
 http://babes.picrush.com/
 http://banaad.
 http://banman.
