--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SEc0gHZykGQ1bOvBihZlFQ
+# Checksum: sV3Yp8kdVt5x+yTmyZ/mOQ
 # Updated: 1 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1147,6 +1147,7 @@
 .thumbcow.com/livebanner/
 .tidaltv.com/
 .timesonline.co.uk/date/profiles/
+.times-herald.com/pubfiles/
 .titsintops.com/intersitial/
 .tizernet.com/engine.php?
 .tkqlhce.
