--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sV3Yp8kdVt5x+yTmyZ/mOQ
+# Checksum: EgJAJgCcv2wjcy3ke/R6Ww
 # Updated: 1 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -536,6 +536,7 @@
 .ecom.js
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
+.edgecastcdn.net/
 .egghelp.org/images/misc/
 .ehow.com/images/brands/
 .ejb.com/300_
@@ -1046,7 +1047,6 @@
 .sbs-ad.com/
 .scanscout.com/
 .scoop.co.nz/xl?c
-.scorecardresearch.com/
 .se/adx.js
 .searchfeed.
 .searchpixie.
@@ -1147,7 +1147,6 @@
 .thumbcow.com/livebanner/
 .tidaltv.com/
 .timesonline.co.uk/date/profiles/
-.times-herald.com/pubfiles/
 .titsintops.com/intersitial/
 .tizernet.com/engine.php?
 .tkqlhce.
@@ -3230,6 +3229,7 @@ http://armorgames.com/misc/banners/
 http://athena-ads.
 http://au2m8.com/
 http://av.ctnetwork.hu/?
+http://b.scorecardresearch.
 http://babes.picrush.com/
 http://banaad.
 http://banman.
