--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -113,12 +113,12 @@
 .cloudfront.net/store/
 .cn/stat.js
 .cnetcontentsolutions.
+.cnn.com/images/tracking/
 .cnn/tracking.
 .cnxweb.com/
 .co2stats.com/
 .com.au/c.gif?
 .com.com/redir?timestamp
-.com/analytics?
 .com/1.gif?
 .com/2.gif?
 .com/3.gif?
@@ -126,6 +126,7 @@
 .com/?livehit
 .com/a.gif?
 .com/adsense?
+.com/analytics?
 .com/b.gif?
 .com/blank.aspx?
 .com/c.gif?
@@ -172,7 +173,6 @@
 .counterwelt.de/track/
 .countomat.com/
 .countomat.com/
-.cnn.com/images/tracking/
 .cpcmanager.
 .cqcounter.
 .creditcards.com/sb.php?
@@ -1090,11 +1090,13 @@
 /pageTracker/?
 /PageTracker?
 /pageTracking.
+/pageTrendlog.html?
 /pageview;
 /pageviews/
 /partner.gif?
 /partners.thefilter.com/
 /permalink-tracker.html?
+/pgtracking.js
 /php-stats.js
 /php-stats.php?
 /phpmyvisites.js
