--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1090,13 +1090,12 @@
 /pageTracker/?
 /PageTracker?
 /pageTracking.
-/pageTrendlog.html?
+/pageTrendlog.
 /pageview;
 /pageviews/
 /partner.gif?
 /partners.thefilter.com/
 /permalink-tracker.html?
-/pgtracking.js
 /php-stats.js
 /php-stats.php?
 /phpmyvisites.js
