--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1,4 +1,5 @@
 # Fanboy's Stats list (Iron-Chrome)
+*/pgtracking.*
 -AdTracking.
 -livetracker.rferl.org
 -seo-tracker.
@@ -1090,7 +1091,6 @@
 /pageTracker/?
 /PageTracker?
 /pageTracking.
-/pageTrendlog.
 /pageview;
 /pageviews/
 /partner.gif?
