--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EgJAJgCcv2wjcy3ke/R6Ww
-# Updated: 1 Aug 2010
+# Checksum: vTE4chgHYbpM0Iukziw6TQ
+# Updated: 2 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -691,6 +691,7 @@
 .imagevenue.com/banner
 .imagevenue.com/interstitial.
 .imagevenue.com/streamate
+.imagefap.com/jscripts/awe.js
 .imedia.co.il/
 .img-vidiklub.com/demo.js
 .imgehost.
