--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vTE4chgHYbpM0Iukziw6TQ
+# Checksum: JFXeO9nzUTSNvVDcFCk5QQ
 # Updated: 2 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1224,6 +1224,7 @@
 .visit-x.net/promo/
 .vn/banner/
 .vod-cash.
+.voyeurweb.com/ads/
 .vrstage.com/vr/banner/
 .vzzk.com/uploads/banners/
 .w3exit.com/
@@ -3254,6 +3255,7 @@ http://banners.rushcommerce.com/
 http://banners.videosz.com/
 http://banners.webcams.com/
 http://banners.webmasterplan.
+http://banners.voyeurweb.com/
 http://banners3.
 http://bans.bride.
 http://bbp.brazzers.com/
