--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -6,6 +6,7 @@
 /banner728x90
 /photoad.
 /PhotoGallaryAds.
+/trackdirect.php?
 http://www.lankasri.eu/clients/
 http://www.smashitsusa.com/bottombanner
 http://www.smashitsusa.com/google
