--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -263,6 +263,7 @@
 .glanceguide.
 .glbdns.microsoft.com/
 .globalviptraffic.
+.globetrackr.com/
 .godaddy.com/image.aspx?
 .google-analytics.com/ga.js?jsonp
 .google-analytics.com/siteopt.js?
