--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -3,6 +3,7 @@
 .com/bAds/
 .com/player/ads/
 .economictimes.indiatimes.com/google_
+.tamilisai.net/pub.
 /banner728x90
 /photoad.
 /PhotoGallaryAds.
