--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -8,6 +8,7 @@
 /banner728x90
 /photoad.
 /PhotoGallaryAds.
+/reghit.asp?
 /trackdirect.php?
 http://www.lankasri.eu/clients/
 http://www.smashitsusa.com/bottombanner
