--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JFXeO9nzUTSNvVDcFCk5QQ
-# Updated: 2 Aug 2010
+# Checksum: TZP0Z687/vTgK0pB/n0fdw
+# Updated: 3 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -686,12 +686,12 @@
 .illimitux.net/js/abp.js
 .ilovecheating.com/ads/
 .iloveim.com/cAdv
+.imagefap.com/jscripts/awe.js
 .imagesatlantic.
 .imageshack.us/ym.php?
 .imagevenue.com/banner
 .imagevenue.com/interstitial.
 .imagevenue.com/streamate
-.imagefap.com/jscripts/awe.js
 .imedia.co.il/
 .img-vidiklub.com/demo.js
 .imgehost.
@@ -2855,6 +2855,7 @@ _682x90_
 _700_100_
 _700_150_
 _720x90.
+_728-90_
 _72890.jpg
 _728_90.
 _728by90_
@@ -2864,7 +2865,6 @@ _728x60.
 _728x90-
 _728x90.
 _728x90_
-_728-90_
 _728x90a_
 _728x90b_
 _728x90p
@@ -2928,6 +2928,7 @@ _google_ad.
 _google_video_ads
 _headline_ad.
 _hp_promo_
+_iad.html?
 _iframe_ad_
 _leftx280_
 _minibanner
@@ -3253,9 +3254,9 @@ http://banners.partypartners.com/
 http://banners.penthouse.com/
 http://banners.rushcommerce.com/
 http://banners.videosz.com/
+http://banners.voyeurweb.com/
 http://banners.webcams.com/
 http://banners.webmasterplan.
-http://banners.voyeurweb.com/
 http://banners3.
 http://bans.bride.
 http://bbp.brazzers.com/
