--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TZP0Z687/vTgK0pB/n0fdw
+# Checksum: Sdmj5kvqm5+cWsJmyrPstA
 # Updated: 3 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1539,6 +1539,7 @@
 /adbanner/
 /adbanners/
 /AdBlock.ashx?
+/adblock_
 /adbrite-
 /adbrite/
 /adbrite_
