--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Sdmj5kvqm5+cWsJmyrPstA
-# Updated: 3 Aug 2010
+# Checksum: 4NzHXL4xHrWZUnAzXPq+lg
+# Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -888,6 +888,7 @@
 .natuko-miracle.com/banner/
 .ncsreporting.
 .nearlygood.com/inc/_aff.php?
+.netseer.com/
 .neodatagroup.com/
 .neoseeker.com/a_pane.php?
 .neowin.net/images/adbot_promos/
