--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4NzHXL4xHrWZUnAzXPq+lg
+# Checksum: jSYBlVSwdXYHq+ETlyty4g
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -888,7 +888,6 @@
 .natuko-miracle.com/banner/
 .ncsreporting.
 .nearlygood.com/inc/_aff.php?
-.netseer.com/
 .neodatagroup.com/
 .neoseeker.com/a_pane.php?
 .neowin.net/images/adbot_promos/
@@ -914,6 +913,7 @@
 .netdirect.nl/
 .netdrive.ws/images/bb
 .netpondads.
+.netseer.com/
 .netseer.com/dsatserving/
 .netshelter.net/serve.cgi?
 .neuesdate.com/banner/
@@ -2736,6 +2736,7 @@ _120_600.
 _120_600_
 _120x240.
 _120x240_
+_120x415_
 _120x480.
 _120x600-
 _120x600.
